# ENMA_language

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  code_generator.cpp  code_generator.h  enma.cpp  enma_clean.sh  enma_compiler.cpp  enma_compiler.h  enma_types.cpp  enma_types.h  example.em  lang_idea.md  lexer.cpp  lexer.h  parser.cpp  parser.h  run_tests.sh  token_types.cpp  token_types.h
tests/: cond.em  loops.em  loops_res  operators.em  operators_res  variables.em  variables_res
